Mon Feb  9 15:10:21 1998  Fred Fish  <fnf@cygnus.com>

	* symtab.c (fixup_psymbol_section): Move forward declaration to
	top of file with other such decls.  Make it a static function.
	* symtab.h: Minor formatting tweaks.

Mon Feb  9 13:14:12 1998  Stan Shebs  <shebs@andros.cygnus.com>

	* config/a29k-udi.mt, config/i960/vxworks960.mt (REMOTE_OBS):
 	Remove redefinition.
	* config/i960/tm-i960.h (BREAKPOINT): Define.

Mon Feb  9 15:35:38 1998  Ian Lance Taylor  <ian@cygnus.com>

	* Makefile.in (init.c): Ignore errors when making init.c.  Seems
	necessary to work around bug in Solaris make.

Sun Jul  6 02:44:28 1997  Philippe De Muyter  <phdm@macqel.be>

        * m68k/tm-delta68.h (CPLUS_MARKER): Macro deleted.
        (EXTRACT_STRUCT_VALUE_ADDRESS): Macro defined.
        (EXTRACT_RETURN_VALUE, STORE_RETURN_VALUE): Macros modified
        because floating-point values return via %fp0.
        (CLEAR_INSN_CACHE): New macro.
        * m68k/tm-m68k.h (REGISTER_CONVERT_TO_VIRTUAL): Macro fixed
        to use DOUBLEST.
        (REGISTER_CONVERT_TO_RAW): Ditto.
        * infptrace.c (child_xfer_memory): If CLEAR_INSN_CACHE is defined,
        call it after having written in child process's memory.
        * inflow.c (PROCESS_GROUP_TYPE): Macro defined if HAVE_TERMIO.
        (gdb_has_a_terminal, terminal_ours_1): Functions fixed for HAVE_TERMIO.

Fri Feb  6 16:17:30 1998  Jeffrey A Law  (law@cygnus.com)

        * config/mips/tm-mips64.h (TARGET_LONG_BIT): Allow final target to
        override.
        (TARGET_LONG_LONG_BIT): Likewise.
        (TARGET_PTR_BIT): Likewise.
start-sanitize-r5900
        * config/mips/tm-r5900.h (TARGET_PTR_BIT): Define to 32 bits.
end-sanitize-r5900

start-sanitize-sky
Fri Feb  6 14:33:34 1998  Doug Evans  <devans@canuck.cygnus.com>

	* configure.tgt (mips64r5900*-sky-elf*): Replaces txvu-elf.
	* config/mips/txvu.mt (SIM): txvu -> mips.

end-sanitize-sky
Fri Feb  6 17:42:22 1998  Andrew Cagney  <cagney@b1.cygnus.com>
